# ft_vox

./: .gitignore
obsidian/.obsidian/: appearance.json  community-plugins.json  workspace.json
obsidian/.obsidian/snippets/: ColoredMainFolders.css
obsidian/Excalidraw/: Chunk-Caves.md  Chunk-Terrain-Faces.md  Chunk1.md  Drawing 2024-09-19 12.09.25.excalidraw.md  Drawing 2024-09-22 00.51.51.excalidraw.md  Drawing 2024-09-27 14.42.12.excalidraw.md
obsidian/§1 FLEETING/: Calc terrain & Caves on threads.md  Config Dosyasi.md
obsidian/§2 PROJECT/: HowToRun.md  Project Subject.md
obsidian/§2 PROJECT/Documents/: Chunks.md  Voxel.md
obsidian/§2 PROJECT/Documents/Proc.Gen/: how to use terrainGen & caveGen.md
obsidian/§2 PROJECT/Proc.Gen/: Vulkan Notları.md  how to use terrainGen & caveGen.md
obsidian/§3 RESOURCES/Proc.Gen.Algos/: Dot Product.md  Perlin Noise.md  Simplex Noise.md
obsidian/§4 AREA/: ChatGPT GorevPaylasimi.md  General ToDo List.md  Optimizasyon.md
obsidian/§4 AREA/CanbanNotes/: Proce... Generate - Ahmet.md
obsidian/§5 NOTES/: 2024-09-15 - Ahmet.md
project/: BuildShaders.sh  CMakeLists.txt  Makefile  build.sh  install.sh  main.cpp
project/inc/: Controller.hpp  CubeModel.hpp  KeyboardHandler.hpp  ProceduralGenerationAlgorithms.hpp  Terrain.hpp  VulkanApp.hpp  chunk.hpp  global.hpp  perlinNoise.hpp  vector2D.hpp  voxel.hpp  worldGen.hpp
project/include/: main.hpp
project/shaders/: frag.frag  frag_fill.frag  frag_fill.spv  frag_wireframe.frag  frag_wireframe.spv  frag_wireframe.spv  vert.spv  vert.vert
project/src/: Controller.cpp  CubeModel.cpp  KeyboardHandler.cpp  Terrain.cpp  VulkanApp.cpp  main.cpp  tempmain.cpp
project/src/ProceduralGeneration/: cellularAutomata.cpp  chunks.cpp  perlinNoise.cpp  worldGen.cpp
project/src/ProceduralGeneration/Algorithm/: cellularAutomata.cpp  generation.cpp  perlinNoise.cpp  procedural.cpp
project/src/map/: chunk.cpp  worldGen.cpp
